--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="hero-section">
                 <div class="faded-text">
-                    Sachin Guru
+                    John Doe
                 </div>
 
                 <div class="hero-section-left">
