--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar">
 
                 <div class="logo-container">
-                    <img src="./images/personalImage" Doe</div>
+                    <img src="" achin</div>
                 </div>
 
                 <div class="nav-items">
@@ -27,7 +27,7 @@
 
             <div class="hero-section">
                 <div class="faded-text">
-                    John Doe
+                    Sachin
                 </div>
 
                 <div class="hero-section-left">
