--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="hero-section-left">
-                    <div class="hero-section-heading">Hi! John Doe</div>
+                    <div class="hero-section-heading">Hi! Sachin</div>
 
                     <div class=" hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
