--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar">
 
                 <div class="logo-container">
-                    <img src="" achin</div>
+                    <img src="./images/project_images/S logo Image.png" achin</div>
                 </div>
 
                 <div class="nav-items">
