--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="user-image">
-                        <img src="./images/project_images/personalImage.jpeg"
+                        <img src="https://images.fandango.com/ImageRenderer/300/0/redesign/static/img/default_poster.png/0/images/masterrepository/performer%20images/205550/ChrisEvans-2019_r.jpg"
                             alt="" id="user-image-size">
                     </div>
 
